--- a/Project3/ClientApp/src/custom.css
+++ b/Project3/ClientApp/src/custom.css
@@ -14,6 +14,7 @@ code {
 }
 
 body {
+    font-family: Ubuntu;
     background: #F9F9F9;
     color: #5D6E97;
 }
@@ -21,7 +22,7 @@ body {
 .table1 {
     background: #FFFFFF;
     border-radius: 10px;
-    box-shadow: 1px -1px 15px rgba(0,0,0,0.1);
+    box-shadow: 4px -1px 10px rgba(7,7,7,0.1);
     width: 90%;
     font-family: Ubuntu;
     font-size: 14px;
@@ -39,7 +40,6 @@ table{
 
 th {
     height: 40px;
-    opacity: 50%;
 }
 
 .tdWithBorder {
@@ -71,7 +71,9 @@ form {
     position: center;
 }
 
-
+h5 {
+    color: rgba(93,110,151,0.4);
+}
 
 .elseB{
     background: none;
@@ -83,8 +85,8 @@ input[type="text" i] {
     align-content: center;
     border-radius: 20px;
     height: 28px;
-    width: 300px;
-    padding: 20px,220px,5px,0px;
+    width: 250px;
+    padding: 15px;
     color: #5D6E97;
 }
 
